--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
 **/android
+!**/android/app/src/main/AndroidManifest.xml
+
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
@@ -66,6 +68,7 @@
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
 **/ios
+!**/ios/Runner/Info.plist
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
