--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   provider: ^3.1.0+1
   preferences: ^4.0.0
   path_provider: ^1.4.0
+  admob_flutter: ^0.3.1
+  #firebase_admob: ^0.9.0+10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
