--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+lib/ads/bloc/ad_mob_bloc.dart
