--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
 dev_dependencies:
   flutter_launcher_icons: "^0.7.3"
 
+  flutter_driver:
+    sdk: flutter
+  test: any
 
   flutter_test:
     sdk: flutter
